update footer link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,7 @@
           <!-- Please don't remove this, keep my open source work credited :) -->
     <p class="theme-by text-muted">
       Powered by
-      <a href="https://wlfnmn.com">Wolf on Moon</a>.
+      <a href="https://wolfonmoon.com">Wolf on Moon</a>.
     </p>
       </div>
     </div>
